<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_bg"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <!--app:contentScrim="?attr/colorPrimary"-->
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/main_color"
            app:title=""
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:src="@drawable/test"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:layout_gravity="start"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dp_size_15">

                <TextView
                    android:layout_marginBottom="@dimen/dp_size_10"
                    android:textSize="@dimen/sp_size_18"
                    android:textColor="@color/whie"
                    android:text="@string/detail_str1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="影片的一开始,身为儿童心理治疗师的麦坎就被自己十年之前曾经放弃治疗的患者枪击,之后..."
                    android:textColor="@color/whie"
                    android:textSize="@dimen/sp_size_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dp_size_15">

                <TextView
                    android:layout_marginBottom="@dimen/dp_size_10"
                    android:textSize="@dimen/sp_size_18"
                    android:textColor="@color/whie"
                    android:text="@string/detail_str2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_imgs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dp_size_15">

                <TextView
                    android:layout_marginBottom="@dimen/dp_size_10"
                    android:textSize="@dimen/sp_size_18"
                    android:textColor="@color/whie"
                    android:text="@string/detail_str4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginBottom="@dimen/dp_size_10"
                    android:textSize="@dimen/sp_size_14"
                    android:textColor="@color/whie"
                    android:text="你的笑点，我包了。有什么烦恼是看一场开心麻花解决不了的？没有的话，就看两场"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dp_size_15">

                <TextView
                    android:layout_marginBottom="@dimen/dp_size_10"
                    android:textSize="@dimen/sp_size_18"
                    android:textColor="@color/whie"
                    android:text="@string/detail_str3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_stars_imgs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dp_size_15">

                <TextView
                    android:layout_marginBottom="@dimen/dp_size_10"
                    android:textSize="@dimen/sp_size_18"
                    android:textColor="@color/whie"
                    android:text="@string/detail_str5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginBottom="@dimen/dp_size_10"
                    android:textSize="@dimen/sp_size_14"
                    android:textColor="@color/whie"
                    android:text="现在热播中，赶紧到影院观看吧！"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:src="@drawable/logo"
        android:layout_margin="20dp"
        android:clickable="true"/>

</android.support.design.widget.CoordinatorLayout>